Italian focus gfx and loc (~40% gfx done, ~95% loc done)

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -434,6 +434,161 @@ ic_USA_neutrality_act:0 "Neutrality act"
 
 
 
+ITA_triumph_in_africa:0 "Triumph in Africa"
+ITA_triumph_in_africa_desc:0 ""
+ITA_give_up_austria:0 "Give up Austria"
+ITA_give_up_austria_desc:0 ""
+ITA_join_anticomintern_pact:0 "Join Anticomintern Pact"
+ITA_join_anticomintern_pact_desc:0 ""
+ITA_grande_italia:0 "Grande Italia"
+ITA_grande_italia_desc:0 ""
+ITA_annex_albania:0 "Annex Albania"
+ITA_annex_albania_desc:0 ""
+ITA_develop_albania:0 "Develop Albania"
+ITA_develop_albania_desc:0 ""
+ITA_steel_pact:0 "Steel Pact"
+ITA_steel_pact_desc:0 ""
+ITA_claim_french_territories:0 "Claim French Territories"
+ITA_claim_french_territories_desc:0 ""
+ITA_claim_greek_territories:0 "Claim Greek Territories"
+ITA_claim_greek_territories_desc:0 ""
+ITA_ebat_nazistov:0 "???ebat nazistov"
+ITA_ebat_nazistov_desc:0 ""
+ITA_csir:0 "Corpo di Spedizione Italiano in Russia"
+ITA_csir_desc:0 ""
+ITA_state_of_the_economy:0 "State of the Economy"
+ITA_state_of_the_economy_desc:0 ""
+ITA_nationalization:0 "Nationalization"
+ITA_nationalization_desc:0 ""
+ITA_keynesian_economy:0 "Keynesian Economy"
+ITA_keynesian_economy_desc:0 ""
+ITA_iri:0 "IRI"
+ITA_iri_desc:0 ""
+ITA_develop_the_steel_refineries:0 "Develop Steel Refineries"
+ITA_develop_the_steel_refineries_desc:0 ""
+ITA_focus_on_north:0 "Focus on North"
+ITA_focus_on_north_desc:0 ""
+ITA_focus_on_south:0 "Focus on South"
+ITA_focus_on_south_desc:0 ""
+ITA_fiat_monopoly:0 "Fiat Monopoly"
+ITA_fiat_monopoly_desc:0 ""
+ITA_autarky:0 "Autarky"
+ITA_autarky_desc:0 ""
+ITA_preferite_il_prodotto_italiano:0 "Preferite il Prodotto Italiano"
+ITA_preferite_il_prodotto_italiano_desc:0 ""
+ITA_restoration_of_alfa_romeo:0 "Restoration of Alfa Romeo"
+ITA_restoration_of_alfa_romeo_desc:0 ""
+ITA_shift_italian_economy_to_war_production:0 "Shift Italian Economy to War Production"
+ITA_shift_italian_economy_to_war_production_desc:0 ""
+ITA_usage_of_new_territories:0 "Use New Territorie"
+ITA_usage_of_new_territories_desc:0 ""
+ITA_more_money_for_rnd:0 "More Money for rnd (idk what rnd is)"
+ITA_more_money_for_rnd_desc:0 ""
+ITA_expand_beretta_and_breda:0 "Expand Beretta and Breda"
+ITA_expand_beretta_and_breda_desc:0 ""
+ITA_form_ministry_of_italian_africa:0 "Form Ministry of Italian Africa"
+ITA_form_ministry_of_italian_africa_desc:0 ""
+ITA_develop_lybia:0 "Develop Lybia"
+ITA_develop_lybia_desc:0 ""
+ITA_develop_horn:0 "Develop Horn"
+ITA_develop_horn_desc:0 ""
+ITA_ethiopian_rubber:0 "Ethiopian Rubber"
+ITA_ethiopian_rubber_desc:0 ""
+ITA_lybian_oil:0 "Lybian Oil"
+ITA_lybian_oil_desc:0 ""
+ITA_defend_our_resources:0 "Defend aquired Resources"
+ITA_defend_our_resources_desc:0 ""
+ITA_egypt_is_ours:0 "Egypt is Ours"
+ITA_egypt_is_ours_desc:0 ""
+ITA_forze_armate_italiane:0 "Forze Armate Italiane"
+ITA_forze_armate_italiane_desc:0 ""
+ITA_franko_needs_help:0 "Franko needs help"
+ITA_franko_needs_help_desc:0 ""
+ITA_gain_xp_from_focus:0 "gain xp from focus"
+ITA_gain_xp_from_focus_desc:0 ""
+ITA_escertio_italiano:0 "Escertio Italiano"
+ITA_escertio_italiano_desc:0 ""
+ITA_army_reform:0 "Army Reform"
+ITA_army_reform_desc:0 ""
+ITA_improve_our_doctrine:0 "Improve our Doctrine"
+ITA_improve_our_doctrine_desc:0 ""
+ITA_alpini:0 "Alpini"
+ITA_alpini_desc:0 ""
+ITA_use_expirience_from_spain_and_ethiopia:0 "Use Expirience from Spain and Ethiopia"
+ITA_use_expirience_from_spain_and_ethiopia_desc:0 ""
+ITA_or_just_give_command_to_germans:0 "...or just give command to germans"
+ITA_or_just_give_command_to_germans_desc:0 ""
+ITA_develop_l6:0 "Develop L6"
+ITA_develop_l6_desc:0 ""
+ITA_further_tank_development:0 "Further Tank Development"
+ITA_further_tank_development_desc:0 ""
+ITA_learn_from_germans:0 "Learn from Germans"
+ITA_learn_from_germans_desc:0 ""
+ITA_mechanize_the_army:0 "Mechanize the Army"
+ITA_mechanize_the_army_desc:0 ""
+ITA_promote_new_generals:0 "Promote new Generals"
+ITA_promote_new_generals_desc:0 ""
+ITA_our_own_heavy_tanks:0 "Our Own Heavy Tanks"
+ITA_our_own_heavy_tanks_desc:0 ""
+ITA_unstoppable_army:0 "Unstoppable Army"
+ITA_unstoppable_army_desc:0 ""
+ITA_regia_marina:0 "Regia Marina"
+ITA_regia_marina_desc:0 ""
+ITA_mas:0 "MAS"
+ITA_mas_desc:0 ""
+ITA_betasom:0 "Betasom"
+ITA_betasom_desc:0 ""
+ITA_expand_taranto_dockyards:0 "Expand taranto dockyards"
+ITA_expand_taranto_dockyards_desc:0 ""
+ITA_support_ships:0 "Support ships"
+ITA_support_ships_desc:0 ""
+ITA_develop_new_guns:0 "Develop new Guns"
+ITA_develop_new_guns_desc:0 ""
+ITA_refit_our_old_ships:0 "Refit our old Ships"
+ITA_refit_our_old_ships_desc:0 ""
+ITA_expand_repair_dockyards:0 "Expand Repair Dockyards"
+ITA_expand_repair_dockyards_desc:0 ""
+ITA_completly_new_fleet:0 "Completly New Fleet"
+ITA_completly_new_fleet_desc:0 ""
+ITA_vittorio_veneto_class_battleships:0 "Think Bigger!"
+ITA_vittorio_veneto_class_battleships_desc:0 ""
+ITA_armada:0 "Armada"
+ITA_armada_desc:0 ""
+ITA_carriers_centralized_fleet:0 "Carriers Centralized Fleet"
+ITA_carriers_centralized_fleet_desc:0 ""
+ITA_order_experimental_ships:0 "Order Experimental Ships"
+ITA_order_experimental_ships_desc:0 ""
+ITA_subs_spam:0 "subs spam"
+ITA_subs_spam_desc:0 ""
+ITA_subs_spam_2:0 "subs spam 2"
+ITA_subs_spam_2_desc:0 ""
+ITA_further_development_of_naval_industry:0 "Further Development of Naval Industry"
+ITA_further_development_of_naval_industry_desc:0 ""
+ITA_roma_e_impero:0 "Roma e Impero"
+ITA_roma_e_impero_desc:0 ""
+ITA_use_new_technologies:0 "Use new Technologies"
+ITA_use_new_technologies_desc:0 ""
+ITA_aeronautica_militare_italiana:0 "Aeronautica Militare Italiana"
+ITA_aeronautica_militare_italiana_desc:0 ""
+ITA_develop_new_fighter_models:0 "Develop new Fighter Models"
+ITA_develop_new_fighter_models_desc:0 ""
+ITA_develop_new_fighter_models_ii:0 "Develop new Fighter Models II"
+ITA_develop_new_fighter_models_ii_desc:0 ""
+ITA_develop_medium_bombers:0 "Develop Medium Bombers"
+ITA_develop_medium_bombers_desc:0 ""
+ITA_close_cooperation_between_fleet_and_air:0 "Close Fleet-Air Cooperation"
+ITA_close_cooperation_between_fleet_and_air_desc:0 ""
+ITA_develop_naval_bombers:0 "Develop naval Bombers"
+ITA_develop_naval_bombers_desc:0 ""
+ITA_expand_production:0 "Expand Production"
+ITA_expand_production_desc:0 ""
+ITA_our_pride:0 "Our Pride"
+ITA_our_pride_desc:0 ""
+ITA_open_rome_school:0 "Open Rome School"
+ITA_open_rome_school_desc:0 ""
+ITA_best_of_the_best:0 "Best of the Best"
+ITA_best_of_the_best_desc:0 ""
+
 ITA_initial_focus:0 "Forza Italia! Forza Duce!"
 ITA_huge_agrarian_sector:0 "Huge Agrarian Sector"
 ITA_slow_industrialization:0 "Slow Industrialization"
