added more dp naval guns, started to balace CA

--- a/localisation/english/ic_research_l_english.yml
+++ b/localisation/english/ic_research_l_english.yml
@@ -25,6 +25,8 @@
  ship_airplane_launcher:0 "Ship Airplane Launcher Techs"
  ship_battery:0 "Ship Batteries Techs"
  advanced_sonar: "Advanced Sonar"
+
+ DP_GUNS_TIP:0 "Available after research of $antiair2$"
  basic_airplane_launcher:0 "Basic Airplane Catapult"
  improved_airplane_torpedo: "Improved Airplane Torpedo"
  advanced_airplane_torpedo: "Advanced Airplane Torpedo"
