--- a/localisation/english/ic_tooltips_l_english.yml
+++ b/localisation/english/ic_tooltips_l_english.yml
@@ -12,4 +12,5 @@
   ITA_unlock_defend_egypt_tt: "§YUnlocks§! §Gdecisions§! to prepare our positions in Egypt."
   ITA_unlock_nationalization_tt: "§YUnlocks§! §Gdecisions§! to nationalise our industry."
   ITA_nationalization_idea_tt: "This idea will be §Rdeleted§!, if all §Ydecisions§! were clicked."
+  ITA_annex_yugo_tt: "We are going to prepare an intervention in §YYugoslavia§!, to fully §Gannex§! it. If §YGermany§! is not at war with §YUSSR§!, they will help us, and we won`t loose any equipment. But they will take §RSerbia§! and §RBanat§!. If we will try to §Gannex§! §YYugoslavia§! without §YGermany§!, we can suffer heavy loses, but we will also get more §Gterritory§!."
   
