:white_check_mark: добавить герме/ссср копий пехотный генералов. мин 5 штук каждому :white_check_mark: сделать своего фельда на танки и на пехоту ссср и герме
так же:
после падения минска умирает павлов
добавлен более сильный пехотный фельдмаршал германии, который смещается с должности при выполнении СССР фокуса SOV_moscow_our

--- a/localisation/english/ic_characters_l_english.yml
+++ b/localisation/english/ic_characters_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ic_GER_ernst_busch:0 "Ernst Busch"
+
+
 ic_SOV_mihail_katukov:0 "Mihail Katukov"
 ic_SOV_dmitry_pavlov:0 "Dmitry Pavlov"
 ic_SOV_yuri_levitan:0 "Yuri Levitan"
