--- a/localisation/english/ic_events_l_english.yml
+++ b/localisation/english/ic_events_l_english.yml
@@ -64,7 +64,7 @@
 
  ic_ger_events.4.t:0 "Minsk Falls!"
  ic_ger_events.4.d:0 ""
- ic_ger_events.4.a:0 "We'll proceed on pushing!"
+ ic_ger_events.4.a:0 "Defenetly Pavlov is to blame for this!"
  ic_ger_events.5.t:0 "Smolensk Falls!"
  ic_ger_events.5.d:0 ""
 
