✅ сделать Антонов, Алексей Иннокентьевич chief of army (+10% атаки), который открывается по новому фокусу перед after-shock ✅ сделать Иссерсон, Георгий Самойлович новым теоретиком ссср заместо жукова ✅ прокачать василевского с +5/+10 до +10/+15 по фокусу after-shock

--- a/localisation/english/ic_characters_l_english.yml
+++ b/localisation/english/ic_characters_l_english.yml
@@ -4,6 +4,8 @@ ic_GER_ernst_busch:0 "Ernst Busch"
 
 ic_SOV_mihail_katukov:0 "Mihail Katukov"
 ic_SOV_dmitry_pavlov:0 "Dmitry Pavlov"
+ic_SOV_aleksey_antonov:0 "Aleksey Antonov"
+ic_SOV_georgy_isserson:0 "Georgy Isserson"
 ic_SOV_yuri_levitan:0 "Yuri Levitan"
 ic_SOV_ivan_larionov:0 "Ivan Larionov"
 
