--- a/localisation/english/ic_unit_l_english.yml
+++ b/localisation/english/ic_unit_l_english.yml
@@ -1,3 +1,17 @@
 ﻿l_english:
  heavy_armor_brigade:0 "Heavy Tank Support"
  category_support_tanks:0 "Support Tank Brigades"
+ flamethrower_sppt:0 "Flamethrower Support"
+ flamethrower_sppt_desc:0 "Flamethrowers can be of great help in close Combat. It can be very costly to clear Houses and Fortifications with regular Infantry Units. The Flamethrower will greatly aid in such tasks and close range combat against soft Units in general."
+ jaegers:0 "Jaeger I"
+ jaegers_desc:0 "Jaeger are forces that specialize in surviving the wilderness of the boreal forest. Usually these troops are native to their territory and take a long time to train."
+ jaegers2:0 "Jaeger II"
+ jaegers2_desc:0 "We are conducting advanced training for our jaegers, teaching them more flexible offensive and defensive tactics."
+ jaegers3:0 "Jaeger III"
+ jaegers3_desc:0 "As a result, we produce the finest soldiers for forest combat, improving not only their equipment but also their personal training in the harshest conditions."
+ shocktroops:0 "Shock Troops I"
+ shocktroops_desc:0 "Shock Troops can smash into Enemy lines to achieve a break through. This is almost essential to any form of Deep-Battle and can greatly contribute to throwing the Defenders into disarray."
+ shocktroops2:0 "Shock Troops II"
+ shocktroops2_desc:0 "We are conducting advanced training for our shock troops, teaching them more flexible offensive and defensive tactics."
+ shocktroops3:0 "Shock Troops III"
+ shocktroops3_desc:0 "As a result, we produce the finest soldiers for urban and fortified combat, enhancing not only their equipment but also their personal training under the harshest conditions."
