воздух: :white_check_mark: убрать дебафф на мишн эфишенси у ссср. заменить его дебаффом на конкретные статы самолётов. например, -агилити или что-то такое
наземка:
:white_check_mark: первый бафф на дефенс совку (ивентовый) даёт -35% атаки в выбранном регионе и -15% в оставшихся двух
:white_check_mark: снабжение в СССР (железные дороги)
:white_check_mark: ??? ускорить вдвое эвакуации прома СССР
:white_check_mark: добавить счётчик эвакуированного прома СССР
:white_check_mark: добавить фокусы СССР на железные дороги

советники:
:white_check_mark: сделать Антонов, Алексей Иннокентьевич chief of army (+10% атаки), который открывается по новому фокусу перед after-shock
:white_check_mark: сделать Иссерсон, Георгий Самойлович новым теоретиком ссср заместо жукова
:white_check_mark: прокачать василевского с +5/+10 до +10/+15 по фокусу after-shock

--- a/localisation/english/ic_victory_points_l_english.yml
+++ b/localisation/english/ic_victory_points_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ VICTORY_POINTS_3582:0 "Ilovlya"
  VICTORY_POINTS_3692:0 "Freiburg"
  VICTORY_POINTS_6270:0 "Coventry"
+ VICTORY_POINTS_6486:0 "Vladimirovka"
  VICTORY_POINTS_9097:0 "Oranienbaum"
