--- a/localisation/english/ic_characters_l_english.yml
+++ b/localisation/english/ic_characters_l_english.yml
@@ -6,6 +6,7 @@ ic_SOV_mihail_katukov:0 "Mihail Katukov"
 ic_SOV_dmitry_pavlov:0 "Dmitry Pavlov"
 ic_SOV_aleksey_antonov:0 "Aleksey Antonov"
 ic_SOV_georgy_isserson:0 "Georgy Isserson"
+ic_SOV_lazar_kaganovich:0 "Lazar Kaganovich"
 ic_SOV_yuri_levitan:0 "Yuri Levitan"
 ic_SOV_ivan_larionov:0 "Ivan Larionov"
 
